Bug 899433 - Accessibility returns empty line for last line in certain cases, r=tbsaunde