accessible/src/generic/HyperTextAccessible.h
@@ -273,6 +273,7 @@ public:
 protected:
   // Accessible
   virtual ENameValueFlag NativeName(nsString& aName) MOZ_OVERRIDE;
+  virtual void CacheChildren() MOZ_OVERRIDE;
 
   // HyperTextAccessible
 
